<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_500"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/username"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:autofillHints="username" />
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>